--- a/HackRankGames/HackRankGames/HackRankGames.vcxproj
+++ b/HackRankGames/HackRankGames/HackRankGames.vcxproj
@@ -79,6 +79,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Domains\DynammicProgramming.hpp" />
+    <ClInclude Include="Domains\GraphTheory.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
