--- a/HackRankGames/HackRankGames/HackRankGames.vcxproj.filters
+++ b/HackRankGames/HackRankGames/HackRankGames.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Domains\DynammicProgramming.hpp">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Domains\GraphTheory.hpp">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
