--- a/HackRankGames/HackRankGames/HackRankGames.vcxproj.filters
+++ b/HackRankGames/HackRankGames/HackRankGames.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Domains\GraphTheory.hpp">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="Domains\Implementation.hpp">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
